# csa-warehouse-backend

./: ERPs.py  README.md  credentials.py  demo.py  ingestion.py  parameters.py  pyproject.toml
app/: main.py
app/core/: db.py
app/crud/: documents.py
app/models/: documents.py
app/routers/: documents.py
